@@ -352,10 +352,8 @@ GtkWidget *plugin_configure(GtkDialog *dialog)
 	gtk_misc_set_alignment(GTK_MISC(label2), 0, 0.5);
 
 	pref_widgets.checkbox_icon_to_toolbar = gtk_check_button_new_with_label(_("Showing icon in toolbar"));
-	gtk_tooltips_set_tip(tooltip, pref_widgets.checkbox_icon_to_toolbar,
-			     _
-			     ("Shows a icon in the toolbar to send file more easy."),
-			     NULL);
+	ui_widget_set_tooltip_text(pref_widgets.checkbox_icon_to_toolbar,
+		_("Shows a icon in the toolbar to send file more easy."));
 	gtk_button_set_focus_on_click(GTK_BUTTON(pref_widgets.checkbox_icon_to_toolbar), FALSE);
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(pref_widgets.checkbox_icon_to_toolbar), icon_in_toolbar);
 	gtk_widget_show(pref_widgets.checkbox_icon_to_toolbar);
@@ -415,8 +413,8 @@ void plugin_init(GeanyData G_GNUC_UNUSED *data)
 	/* Build up menu entry */
 	menu_mail = gtk_menu_item_new_with_mnemonic(_("_Mail document"));
 	gtk_container_add(GTK_CONTAINER(geany->main_widgets->tools_menu), menu_mail);
-	gtk_tooltips_set_tip(tooltips, menu_mail,
-			     _("Sends the opened file as unzipped attachment by any mailer from your $PATH"), NULL);
+	ui_widget_set_tooltip_text(menu_mail,
+		_("Sends the opened file as unzipped attachment by any mailer from your $PATH"));
 	g_signal_connect(G_OBJECT(menu_mail), "activate", G_CALLBACK(send_as_attachment), NULL);
 
 	/* setup keybindings */
